# Rust-auth-ms

./: .env.example  .gitignore  Cargo.toml  IMPROVEMENT_PLAN.md  LICENSE  README.md
crates/api/: Cargo.toml
crates/api/src/: bootstrap.rs  config.rs  db.rs  error.rs  main.rs  state.rs  util.rs
crates/api/src/extractors/: admin_user.rs  auth_user.rs  mod.rs
crates/api/src/routes/: auth.rs  roles.rs  users.rs
crates/core/: Cargo.toml
crates/core/src/: error.rs  lib.rs  pagination.rs
crates/core/src/auth/: claims.rs  jwt.rs  mod.rs  password.rs
crates/core/src/dto/: change_password.rs  login.rs  mod.rs  refresh.rs  token.rs
crates/core/src/models/: roles.rs  users.rs
crates/core/src/repositories/: mod.rs  roles.rs  users.rs
crates/core/src/services/: auth.rs  mod.rs  roles.rs  users.rs
crates/email/: Cargo.toml
crates/email/src/: file.rs  lib.rs  sender.rs  smtp.rs
