[workspace]
resolver = "2"
members = [
    "crates/api",
    "crates/core",
    "crates/email",
]

[workspace.package]
version = "0.2.0"
edition = "2021"
rust-version = "1.75"
license = "MIT"
authors = ["Artem <arteminariy@yandex.ru>"]
repository = "https://github.com/Arteminariy/Rust-auth-ms"

[workspace.dependencies]
# Web framework
axum = "0.7"
tower = "0.4"
tower-http = { version = "0.5", features = ["trace", "cors"] }
tokio = { version = "1", features = ["full"] }
async-trait = "0.1"

# Database
diesel = { version = "2.2", features = ["postgres", "r2d2", "uuid"] }
diesel_migrations = "2.2"
r2d2 = "0.8"

# Serialization
serde = { version = "1", features = ["derive"] }
serde_json = "1"

# Crypto & auth
argon2 = "0.5"
jsonwebtoken = "9"

# Utilities
uuid = { version = "1", features = ["serde", "v4"] }
chrono = { version = "0.4", default-features = false, features = ["clock", "serde"] }
dotenvy = "0.15"
thiserror = "1"
anyhow = "1"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# Email (Phase 0a: trait only; lettre added in Phase 0b/c)
lettre = "0.11"

[profile.release]
opt-level = 3
lto = "thin"
codegen-units = 1
strip = "symbols"
