[workspace]
resolver = "2"
members = [
    "crates/api",
    "crates/core",
    "crates/email",
]

[workspace.package]
version = "0.2.0"
edition = "2024"
rust-version = "1.85"
license = "MIT"
authors = ["Artem <arteminariy@yandex.ru>"]
repository = "https://github.com/Arteminariy/Rust-auth-ms"

[workspace.dependencies]
# Web framework
axum = "0.7"
tower = "0.4"
tower-http = { version = "0.5", features = ["trace"] }
tokio = { version = "1", features = ["full"] }
async-trait = "0.1"

# Database
diesel = { version = "2.2", features = ["postgres", "r2d2", "uuid"] }
diesel_migrations = "2.2"
r2d2 = "0.8"

# Serialization
serde = { version = "1", features = ["derive"] }
serde_json = "1"

# Crypto & auth
argon2 = { version = "0.5", features = ["password-hash", "std"] }
jsonwebtoken = "9"

# Email
lettre = "0.11"

# Utilities
uuid = { version = "1", features = ["serde", "v4"] }
chrono = { version = "0.4", default-features = false, features = ["clock", "serde"] }
dotenvy = "0.15"
thiserror = "1"
anyhow = "1"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

[profile.release]
opt-level = 3
lto = "thin"
codegen-units = 1
strip = "symbols"
