[package]
name = "auth-ms-core"
description = "Business logic: models, repositories, services. No HTTP, no I/O."
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true

[dependencies]
# Database
diesel = { workspace = true }

# Crypto
argon2 = { workspace = true }
jsonwebtoken = { workspace = true }

# Serialization
serde = { workspace = true }
serde_json = { workspace = true }

# Utilities
uuid = { workspace = true }
chrono = { workspace = true }
thiserror = { workspace = true }
